objects/redwing__LMS_Plugin__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>redwing__Order__c</fullName>
        <inlineHelpText>Order in which this plugin will be executed</inlineHelpText>
        <label>Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Plugin_Name__c</fullName>
        <description>User object field expected value.</description>
        <label>Plugin Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Plugin_Type__c</fullName>
        <label>Plugin Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Learning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redwing__Record_Type__c</fullName>
        <description>Learning Record Type Name</description>
        <externalId>true</externalId>
        <inlineHelpText>Learning Record Type Name for which this plugin will be executed</inlineHelpText>
        <label>Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>LMS Plugin</label>
    <listViews>
        <fullName>redwing__All</fullName>
        <columns>NAME</columns>
        <columns>redwing__Plugin_Type__c</columns>
        <columns>redwing__Plugin_Name__c</columns>
        <columns>redwing__Record_Type__c</columns>
        <columns>redwing__Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LLN-{0000000}</displayFormat>
        <label>LMS Plugin ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LMS Plugins</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>redwing__RecordType_Required</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(redwing__Plugin_Type__c) == &quot;Learning&quot; &amp;&amp; ISBLANK(redwing__Record_Type__c)</errorConditionFormula>
        <errorMessage>Record Type must be defined for Learning Plugins</errorMessage>
    </validationRules>
</CustomObject>